--- a/compose.yaml
+++ b/compose.yaml
@@ -34,7 +34,7 @@ services:
       - 5514:5514/udp #optional
     restart: unless-stopped
   unifi-db:
-      image: docker.io/mongo:5.0.23 #4.4.26
+      image: docker.io/mongo:4.4.26
       container_name: unifi-db
       healthcheck:
         test:
