--- a/compose.yaml
+++ b/compose.yaml
@@ -16,8 +16,8 @@ services:
       - MONGO_HOST=unifi-db
       - MONGO_PORT=27017
       - MONGO_DBNAME=unifi
-      - MEM_LIMIT=1024 #optional
-      - MEM_STARTUP=1024 #optional
+      - MEM_LIMIT=default #optional
+      - MEM_STARTUP=default #optional
       - MONGO_TLS= #optional
       - MONGO_AUTHSOURCE= #optional
     volumes:
