--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,7 @@ version: "2.1"
 services:
   unifi-network-application:
     image: lscr.io/linuxserver/unifi-network-application:latest
+    cpus: 0.5
     container_name: unifi-network-application
     depends_on:
       unifi-db:
@@ -35,6 +36,7 @@ services:
     restart: unless-stopped
   unifi-db:
       image: docker.io/mongo:4.4.18 # afhankelijk van Raspberry (hardware) versie
+      cpus: 0.5
       container_name: unifi-db
       healthcheck:
         test:
