--- a/compose.yaml
+++ b/compose.yaml
@@ -17,8 +17,8 @@ services:
       - MONGO_HOST=unifi-db
       - MONGO_PORT=27017
       - MONGO_DBNAME=unifi
-      - MEM_LIMIT=768 #optional
-      - MEM_STARTUP=768 #optional
+      - MEM_LIMIT=1024 #optional
+      - MEM_STARTUP=1024 #optional
       - MONGO_TLS= #optional
       - MONGO_AUTHSOURCE= #optional
     volumes:
@@ -35,7 +35,7 @@ services:
       - 5514:5514/udp #optional
     restart: unless-stopped
   unifi-db:
-      image: docker.io/mongo:4.4.18 # afhankelijk van Raspberry (hardware) versie
+      image: docker.io/mongo:5.0.23 #4.4.18  afhankelijk van Raspberry (hardware) versie
       #cpus: 0.5
       container_name: unifi-db
       healthcheck:
