--- a/compose.yaml
+++ b/compose.yaml
@@ -35,7 +35,7 @@ services:
       - 5514:5514/udp #optional
     restart: unless-stopped
   unifi-db:
-      image: docker.io/mongo:5.0.23 #4.4.18  afhankelijk van Raspberry (hardware) versie
+      image: docker.io/mongo:4.4.18 # laatste versie supported op Raspberry (non ARMv8.2-A hardware)
       #cpus: 0.5
       container_name: unifi-db
       healthcheck:
